--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: app_store_server_sdk
-description: Apple App Store Server SDK for simplifying integration with App Store Server API
+description: Apple App Store Server SDK for facilitating integrations with App Store Server API
 homepage: https://github.com/Omnimind-Ltd/app-store-server-sdk
-version: 1.1.6
+version: 1.1.7
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
