--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,3 +18,6 @@ dev_dependencies:
   test: ^1.20.1
   build_runner: ^2.1.7
   json_serializable: ^6.1.4
+
+false_secrets:
+  - /test/app_store_server_sdk_test.dart
